Add CSS styling to html
Use CSS guidelines to style the recipe project.

--- a/recipes/chicken-pastor.html
+++ b/recipes/chicken-pastor.html
@@ -1,13 +1,22 @@
-<h1>Chicken Al Pastor</h1>
-<img src="/images/chicken-al-pastor-ddmfs-0831-4x3-1-07333bb010104b059996d70da5c02be0.webp" alt="chicken al pastor">
-<h2><strong><em>Description</em></strong></h2>
-<p>
+<link rel="stylesheet" href="../style.css" type="text/css" media="screen" charset="UTF-8">
+
+<h1 class="first head">Chicken Al Pastor</h1>
+
+<img class="chicken-pastor" src="/images/chicken-al-pastor-ddmfs-0831-4x3-1-07333bb010104b059996d70da5c02be0.webp" alt="chicken al pastor">
+
+<h2 class="second head"><strong><em>Description</em></strong></h2>
+
+<!-- Edit classes to give specific styling. Keep the same on each page -->
+
+<div class="container">
+  <p class="text">
     If you are looking for the best chicken al pastor recipe, you've come to the right place. 
     Here is everything you need to know about making the best chicken al pastor of your life.
-</p>
+</p>  
+</div>
 
-<h3>Ingredients</h3>
-<ul>
+<h3 class="third head">Ingredients</h3>
+<ul class="list">
     <li>4 dried gudajilo chiles, stemmed and seeded</li>
     <li>2 tablespoons achiote paste</li>
     <li>6 large cloves garlics, peeled</li>
@@ -27,8 +36,8 @@
 
 </ul>
 
-<h3>Steps</h3>
-<ol>
+<h3 class="third head">Steps</h3>
+<ol class="list">
     <li>Heat a skillet over medium-high head.</li>
     <li>Combine ingredients in a blender.</li>
     <li>Refridgerate marinade at least 8 hours.</li>
