--- a/recipes/french-toast.html
+++ b/recipes/french-toast.html
@@ -1,13 +1,22 @@
-<h1>French Toast Recipe</h1>
-<img src="/images/7016-french-toast-i-DDMFS-4x3-26c468d9cb284c2c83432bf2d33d49f8.webp" alt="french-toast">
-<h2><strong><em>Description</em></strong></h2>
-<p>
-    If you are looking for the best French toast recipe, you've come to the right place. 
-    Here is everything you need to know about making the best French toast of your life.
-</p>
+<link rel="stylesheet" href="../style.css" type="text/css" media="screen" charset="UTF-8">
 
-<h3>Ingredients</h3>
-<ul>
+<h1 class="first head">French Toast Recipe</h1>
+
+<img class="french-toast" src="/images/7016-french-toast-i-DDMFS-4x3-26c468d9cb284c2c83432bf2d33d49f8.webp" alt="french-toast">
+
+<h2 class="second head"><strong><em>Description</em></strong></h2>
+
+<!-- Edit classes to give specific styling. Keep the same on each page -->
+
+<div class="container">
+    <p class="text">
+        If you are looking for the best French toast recipe, you've come to the right place. 
+        Here is everything you need to know about making the best French toast of your life.
+    </p>  
+</div>
+
+<h3 class="third head">Ingredients</h3>
+<ul class="list">
     <li>2/3 cup milk</li>
     <li>2 large eggs</li>
     <li> 1 teaspoon vaniila extract (Optional)</li>
@@ -17,8 +26,8 @@
     <li> 1 table spoon unsalted butter, or more as needed</li>
 </ul>
 
-<h3>Add More Recipes</h3>
-<ol>
+<h3 class="third head">Add More Recipes</h3>
+<ol class="list">
     <li>Gather all ingredients.</li>
     <li>Whisk milk, eggs, vanilla, cinnamon, and salt together in a shallow bowl.</li>
     <li>Dunk bread in the egg mixture, soaking both sides.</li>
