--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -1,13 +1,23 @@
-<h1>Lasagna Recipe</h1>
-<img src="/images/23600-worlds-best-lasagna-armag-4x3-1-b24f9ad518d74090bf197828492c64a6.webp" alt="lasagna">
-<h2><strong><em>Description</em></strong></h2>
-<p>
+<link rel="stylesheet" href="../style.css" type="text/css" media="screen" charset="UTF-8">
+
+<h1 class="first head">Lasagna Recipe</h1>
+
+<img class="lasagna" src="/images/23600-worlds-best-lasagna-armag-4x3-1-b24f9ad518d74090bf197828492c64a6.webp" alt="lasagna">
+
+<!-- Edit classes to give specific styling. Keep the same on each page -->
+
+<h2 class="second head"><strong><em>Description</em></strong></h2>
+
+<div class="container">
+  <p class="text">
     If you are looking for the best lasagna recipe, you've come to the right place. 
     Here is everything you need to know about making the best lasagna of your life.
-</p>
+</p>  
+</div>
 
-<h3>Ingredients</h3>
-<ul>
+
+<h3 class="third head">Ingredients</h3>
+<ul class="list">
     <li>Meat</li>
     <li>Onion and garlic</li>
     <li>Tomato products</li>
@@ -18,8 +28,8 @@
     <li>Egg</li>
 </ul>
 
-<h3>Add More Recipes</h3>
-<ol>
+<h3 class="third head">Add More Recipes</h3>
+<ol class="list">
     <li>Make the meat sauce.</li>
     <li>Cook the noodles.</li>
     <li>Make the ricotta mixture.</li>
