--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <link rel="stylesheet" href="./style.css" type="text/css" media="screen" charset="UTF-8">
 </head>
 <body>
     <h1>Odin Recipes</h1>
